chandeliers-lus/tests/compile_fail/ui/causality/cycle-node.stderr
error: Node `bar` was found to be part of a dependency cycle
 --> tests/compile_fail/ui/causality/cycle-node.rs:6:10
  |
6 |     node bar(i : int) returns (o : int);
  |          ^^^
  |
note: The cycle also goes through Node `foo`
 --> tests/compile_fail/ui/causality/cycle-node.rs:3:10
  |
3 |     node foo(i : int) returns (o : int);
  |          ^^^
